tests/untyped_numeric_collapse/error.txt
Validation error: ./tests/untyped_numeric_collapse/untyped_numeric_collapse.fae:3
 Constant number -1 is negative and so cannot be represented as `u32`
  3|     let _: u32 = -1 // negative
                      ^^

Validation error: ./tests/untyped_numeric_collapse/untyped_numeric_collapse.fae:6
 Constant number 256 is too large to be represented as `u8`
  6|     let _: u8 = 256 // to large
                     ^^^

Validation error: ./tests/untyped_numeric_collapse/untyped_numeric_collapse.fae:9
 Constant number 128 is too large to be represented as `i8`
  9|     let _: i8 = 128 // to large
                     ^^^

Validation error: ./tests/untyped_numeric_collapse/untyped_numeric_collapse.fae:11
 Constant number -129 is too small to be represented as `i8`
  11|     let _: i8 = -129 // to small
                      ^^^^
